--- a/Ex3/Ex3.csproj
+++ b/Ex3/Ex3.csproj
@@ -122,6 +122,7 @@
     <Content Include="Views\Web\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Web\display.cshtml" />
+    <Content Include="Views\Web\timesPerSecond.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
